lesson_18 task_2 v1.2 fix align

--- a/lesson_18/task_2/styles.css
+++ b/lesson_18/task_2/styles.css
@@ -15,7 +15,7 @@
   font-weight: 700;
   border: none;
   cursor: pointer;
-  vertical-align: middle;
+  line-height: 50px;
 }
 
 .custom-btn:hover {
